[package]
name = "ryu-bugs"
version = "0.1.0"
authors = ["Casey Rodarmor <casey@rodarmor.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itoa = {version = "0.4.7", features = ["i128"]}
proptest = "1.0.0"
ryu = "1.0.5"
time = "0.2.26"
